<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androiddeveloper.googlestudyjams.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_photos"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


            <!--试试不同的scaleType-->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/android" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#4E4B4F" />

            <EditText
                android:id="@+id/album_description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album_description"
                android:inputType="textMultiLine" />

            <Spinner
                android:id="@+id/sort_by_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/notify_me_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify_me"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:textAppearance="?android:textAppearanceMedium" />
                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>


            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="2.5"
                android:stepSize="0.5" />

            <Switch
                android:id="@+id/backup_photos_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_backup_photos"
                android:textAppearance="?android:textAppearanceSmall" />


            <SeekBar
                android:id="@+id/seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="20" />

            <SearchView
                android:id="@+id/search_viewr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_photos" />

            <ProgressBar
                android:id="@+id/loading_spinner"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="40"/>



        </LinearLayout>


    </ScrollView>


</LinearLayout>
